--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Burgers</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Nunito+Sans:wght@700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito+Sans:wght@700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
@@ -21,11 +21,61 @@
                 <p>
                     Закажи наши фирменные бургеры или собери что-то своё, а&nbsp;наши курьеры доставят за&nbsp;30&nbsp;минут
                 </p>
-                <a href="#">заказать</a>
+                <a href="file:///C:/Users/kirik/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/HTML/%D0%A1%D0%B0%D0%B9%D1%82.html#footing" target="_blank">заказать</a>
             </div>
             <div class="visual">
                 <div class="bg"></div>
                 <img src="imag/burger.png" alt="Burger">
+            </div>
+        </div>
+    </div>
+    <div class="promo">
+        <div class="container">
+            <div class="promo-left">
+                <p class="sale">Скидка</p>
+                <p class="cost">-20%</p>
+                <p class="description">При заказе на 3х и более персон мы делаем скидки, а также предоставляем скидки именинникам</p>
+            </div>
+            <div class="promo-right">
+                <p class="free">Бесплатно</p>
+                <p class="description">При заказе на сумму 500 рублей и более - доставляем бесплатно</p>
+                <a href="#">заказать</a>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div class="item">
+                <img class="logo" src="imag/logo.svg" alt="logo">
+            </div>
+            <div class="item">
+                <h2>основные ссылки</h2>
+                <ul>
+                    <li><a href="">Меню</a></li>
+                    <li><a href="">Заказ и Доставка</a></li>
+                    <li><a href="">Методы оплаты</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="item">
+                <h2>оосновная информация</h2>
+                <ul>
+                    <li>
+                        <span>Время</span>
+                        ПН - ВС <br>
+                        11:00 - 22:00 без перерывов
+                    </li>
+                    <li>
+                        <span>Адрес</span>
+                        Москва, ул. Тверская, 5, вход со двора
+                    </li>
+                </ul>
+            </div>
+            <div class="tel">
+                <ul>
+                    <li>+ 7 900 787 13-13</li>
+                    <li>+ 7 900 700 14-14</li>
+                </ul>
             </div>
         </div>
     </div>
