--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </ul>
             </div>
             <div class="item">
-                <h2>оосновная информация</h2>
+                <h2>основная информация</h2>
                 <ul>
                     <li>
                         <span>Время</span>
